Tested and fixed on IE11, ff and chrome

--- a/stylesh.css
+++ b/stylesh.css
@@ -190,6 +190,11 @@ h2{
 
 #cont img{
     height: 50px;
+    opacity: 0.7;
+}
+
+#cont img:hover{
+    opacity: 1;
 }
 
 #cont a{
